// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Carousel/PauseButton.PauseIcon should render an svg pause icon with the fill #000 1`] = `
"

<svg
  data-testid="carousel-pause-icon"
  xmlns="http://www.w3.org/2000/svg"
  viewBox="0 0 16 16"
  width="16"
  height="16"
>
  <path
    fill="#000"
    d="M5.5 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zm4 0a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5z"
  ></path></svg
>;
"
`;

exports[`components/Carousel/PauseButton.PauseIcon should render an svg pause icon with the fill #fff 1`] = `
"

<svg
  data-testid="carousel-pause-icon"
  xmlns="http://www.w3.org/2000/svg"
  viewBox="0 0 16 16"
  width="16"
  height="16"
>
  <path
    fill="#fff"
    d="M5.5 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zm4 0a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5z"
  ></path></svg
>;
"
`;
